# basic-rse

./: .gitignore  LICENSE  README.md
backend-app/c++/simulator/: CMakeLists.txt  README.md
backend-app/c++/simulator/Doxygen/: CMakeLists.txt  awesome.css
backend-app/c++/simulator/Python/: CMakeLists.txt  plotter.py
backend-app/c++/simulator/Source/: Awesome.cpp  Awesome.hpp  CMakeLists.txt  awsCoreMatrixOperations.hpp  awsCoreSparseLinearSolvers.hpp  awsOperatorConstructor.hpp  awsSparseLinearAlgebra.hpp
backend-app/c++/simulator/Testing/: CMakeLists.txt  awsTestingCommon.hpp  linear_algebra_tests.cpp  pde_tests.cpp
backend-app/c++/simulator/scripts/: runconf.sh
background/design/documentation/: doxygen.md  rest_sphinx_rtd.md
background/testing/quality/: coding_standards.md  coverage.md  static_analysis.md
background/testing/test_driven_dev/ci/: circleci.md
background/testing/test_driven_dev/unit_testing/: gtest.md
background/tooling/: contents.md
background/tooling/editors/: emacs.md
data-mgmt/: README.md
data-mgmt/relational/: 1 - create user swc.sql  2 - create schema from tdm.sql  3 - create supporting objs and code.sql  4 - execute code gen.sql  README.md
